# compiz-bcop

./: AUTHORS  Makefile.am  NEWS  README.md  VERSION  autogen.sh  bcop.pc.in  configure.ac
bcop-dump/: Makefile  bcop-dump.c
bcopconvert/: bcopconvert.xslt
examples/: example.options
pluginMakefile/: Makefile
src/: Makefile.am  bcop.h  bcop.in  bcop.xslt  code_generator.c  schema_generator.c  xml_parser.c
